--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-index.html
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <title>Run Buddy - The Original Running Matchmaker</title>
+    </head>
+    <body>
+        <h3>RUN BUDDY</h3>
+        What We DO
+        🏃
+    </body>
+</html>
