--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
         <title>Run Buddy - The Original Running Matchmaker</title>
     </head>
     <body>
-        <h3>RUN BUDDY</h3>
-        What We DO
-        🏃
-    </body>
+        <h1>RUN BUDDY</h1>
+        What We Do What You Do Your Trainers Reach Out
+      </body>
 </html>
