--- a/index.html
+++ b/index.html
@@ -150,7 +150,8 @@
   <!-- "reach out" section -->
  <!-- "reach out" section -->
 <section>
-  <h2>Reach Out</h2>
+  <section id="reach-out" class="contact">
+    <h2 class="section-title secondary-border">
   <div class="contact-info">
     <iframe 
     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3321.6302493725075!2d-112.38376758537356!3d33.64082794674694!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872b452aa9b4308b%3A0x96259feba592ad1!2s17129%20N%20Larkspur%20Ln%2C%20Surprise%2C%20AZ%2085374!5e0!3m2!1sen!2sus!4v1612142055053!5m2!1sen!2sus" 
